k8s/frontend/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend-1
  type: ClusterIP
...
